--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "phpunit/phpunit": "^8.1"
   },
   "require": {
-    "php": "^7.1.*",
-    "myclabs/php-enum": "^1.6"
+    "php": "^7.1.0",
+    "myclabs/php-enum": "^1.6",
+    "symfony/yaml": "^4.2"
   }
 }
